<resources>
    <string name="app_name">GV BLE</string>
    <!--    Menu    -->
    <string name="flashlightAppBtText">Flashlight</string>
    <string name="povAppBtText">POV display</string>
    <string name="motorAppBtText">Motor</string>
    <string name="tankAppBtText">Tank</string>
    <string name="windowAppBtText">Window</string>
    <string name="taserAppBtText">Taser</string>

    <string name="menuDistanceBetweenButtons">20dp</string>

    <!--    Flashlight    -->
    <string name="powerModes">Safe mode</string>
    <string name="lockSwitchText">Lock</string>
    <string name="dutyCycleText">Duty cycle (%)</string>
    <string name="frequency">Frequency (Hz)</string>
    <string name="pwmOnBtText">SET PWM</string>
    <string name="decrFreqBtText">-</string>
    <string name="freqRpmText">60Hz (3600 rpm)</string>
    <string name="incrFreqBtText">+</string>
    <string name="weakPowerOnBtText">POWER ON (1%)</string>
    <string name="mediumPowerOnBtText">POWER ON (70%)</string>
    <string name="fullPowerOnBtText">POWER ON (100%)</string>
    <string name="powerOffBtText">POWER OFF</string>
    <string name="dutyCycleStartVal">1</string>
    <string name="frequencyStartValue">60</string>

    <!--    POV display    -->
    <string name="povDisplaySendText">Send</string>
    <string name="powerMotorText">Power motor</string>
    <string name="motorOffText">Motor off</string>
    <string name="desiredRpmText">Desired RPM</string>
    <string name="synchronizeCheckboxText">Synchronize</string>
    <string-array name="displayModes">
        <item>Show text mode</item>
        <item>Set single led mode</item>
        <item>Set all leds mode</item>
    </string-array>

    <!--    Motor    -->
    <string name="dutyCycleTextMinimal">(%)</string>
    <string name="frequencyTextMinimal">(Hz)</string>
    <string name="motorCwText">&gt;</string>
    <string name="motorCcwText">&lt;</string>
    <string name="motorStopText">||</string>
    <string name="motorAText">MA</string>
    <string name="motorBText">MB</string>
    <string name="motorCText">MC</string>
    <string name="allMotorsText">Freq (Hz)</string>
    <string name="timeoutText">Timeout (ms)</string>
    <string name="motorDutyStartVal">100</string>
    <string name="motorFreqStartValue">1000</string>
    <string name="motorTimeoutStartValue">0</string>
    <string name="motorsOffText">Motors off</string>

    <!--    Tank    -->
    <string name="tankDutyText">MA=MB</string>
    <string name="powerOffText">Power off</string>
    <string name="tankMCDutyStartVal">0</string>
    <string name="tankMCDutyCheckBox">INV</string>
    <string name="tankMovementDutyTextMin">100%</string>
    <string name="tankMovementMCDutyTextMin">0%</string>

    <string name="arrowN" >↑</string>
    <string name="arrowE" >↻</string>
    <string name="arrowS" >↓</string>
    <string name="arrowW" >↺</string>
    <string name="arrowNE">↗</string>
    <string name="arrowSE">↘</string>
    <string name="arrowSW">↙</string>
    <string name="arrowNW">↖</string>
    <string name="tankStop">⚬</string>

    <!--    Window    -->
    <string name="windowOpenText">Open</string>
    <string name="windowCloseText">Close</string>
    <string name="windowOpenNowText">Open now</string>
    <string name="windowCloseNowText">Close now</string>
    <string name="windowPwmText">PWM</string>
    <string name="windowTimeoutText">Timeout </string>
    <string name="windowLastCmdText"> </string>
    <string name="windowExecTimeHint">Execute at</string>

    <!--    Taser   -->
    <string name="onText">ON</string>
    <string name="offText">OFF</string>

</resources>