<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gvLight"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="0dp">

        <Button
            android:id="@+id/connection_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gvDark"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:hapticFeedbackEnabled="true"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/deviceInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/textColorLight"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/connection_status"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deviceInfo"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/powerModes"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#28772B"
                android:text="@string/powerModes"
                android:textColor="#FFFFFF" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/lockSwitch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:switchPadding="10dp"
                android:text="@string/lockSwitchText"
                android:textColor="@color/textColorLight"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:id="@+id/MA_dutyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                app:flow_horizontalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TableLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/editTextText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dutyCycleText"
                            android:textAlignment="center"
                            android:textColor="@color/textColorLight"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/dutyCycleTextBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="1"
                            android:inputType="number|numberDecimal|numberSigned"
                            android:maxLength="3"
                            android:text="@string/dutyCycleStartVal"
                            android:textAlignment="center"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/editTextText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/frequency"
                            android:textAlignment="center"
                            android:textColor="@color/textColorLight"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/frequencyTextBox"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="1"
                            android:inputType="number|numberDecimal|numberSigned"
                            android:text="@string/frequencyStartValue"
                            android:textAlignment="center"
                            android:textSize="16sp" />
                    </TableRow>

                </TableLayout>

                <Button
                    android:id="@+id/pwmOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:onClick="onPwmOnClicked"
                    android:text="@string/pwmOnBtText"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/MA_dutyLayout"
                tools:layout_editor_absoluteX="378dp">

                <Button
                    android:id="@+id/decreaseFrequency"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/decrFreqBtText" />

                <TextView
                    android:id="@+id/freqRpmText"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/freqRpmText"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/increaseFrequency"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/incrFreqBtText" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/weakPowerOnBt"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:text="@string/weakPowerOnBtText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:enabled="false" />

        <Button
            android:id="@+id/mediumPowerOnBt"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:text="@string/mediumPowerOnBtText"
            app:layout_constraintTop_toBottomOf="@+id/weakPowerOnBt"
            tools:layout_editor_absoluteX="0dp"
            android:enabled="false" />

        <Button
            android:id="@+id/fullPowerOnBt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/fullPowerOnBtText"
            app:layout_constraintTop_toBottomOf="@+id/mediumPowerOnBt"
            tools:layout_editor_absoluteX="0dp"
            android:enabled="false" />

        <Button
            android:id="@+id/powerOffBt"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#FF6600"
            android:text="@string/powerOffBtText"
            app:layout_constraintBottom_toBottomOf="parent"
            android:enabled="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>